[package]
name = "encashment"
version = "4.3.0"
authors = ["XODE <admin@xode.net>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.3", default-features = false }
ink_prelude = { version = "2", git = "https://github.com/paritytech/ink.git", tag = "latest-v2", package = "ink_prelude", default-features = false }
# std = "0.0.1"

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

xode_xon20 = { path = "./../xode_xon20", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "4.3" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "xode_xon20/std",
]
ink-as-dependency = []
e2e-tests = []